# event-sourcing-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  STATUS.md  docker-compose.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  error.rs  lib.rs  main.rs
crates/api/src/routes/: health.rs  metrics.rs  mod.rs  orders.rs
crates/api/tests/: api_integration.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  types.rs
crates/domain/: Cargo.toml
crates/domain/benches/: domain_bench.rs
crates/domain/src/: aggregate.rs  command.rs  error.rs  lib.rs
crates/domain/src/order/: aggregate.rs  commands.rs  events.rs  mod.rs  service.rs  state.rs  value_objects.rs
crates/domain/tests/: order_integration.rs
crates/event-store/: Cargo.toml
crates/event-store/benches/: event_store_bench.rs
crates/event-store/src/: error.rs  event.rs  lib.rs  memory.rs  postgres.rs  query.rs  snapshot.rs  store.rs
crates/event-store/tests/: postgres_integration.rs
crates/projections/: Cargo.toml
crates/projections/benches/: projections_bench.rs
crates/projections/src/: error.rs  lib.rs  processor.rs  projection.rs  read_model.rs
crates/projections/src/views/: current_orders.rs  customer_orders.rs  inventory.rs  mod.rs  order_history.rs
crates/projections/tests/: integration.rs
crates/saga/: Cargo.toml
crates/saga/src/: aggregate.rs  coordinator.rs  error.rs  events.rs  lib.rs  order_fulfillment.rs  state.rs
crates/saga/src/services/: inventory.rs  mod.rs  payment.rs  shipping.rs
crates/saga/tests/: saga_integration.rs
docs/: README.md  architecture.md  cqrs.md  event-sourcing.md  saga-pattern.md
frontend/: package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/api/: client.ts  orders.ts  seed.ts  types.ts
frontend/src/lib/components/: CreateOrderForm.svelte  EventTimeline.svelte  Header.svelte  OrderCard.svelte  OrderStateBadge.svelte  SagaProgress.svelte  StateMachine.svelte
frontend/src/lib/utils/: money.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/demo/: +page.svelte
frontend/src/routes/orders/: +page.svelte
frontend/src/routes/orders/[id]/: +page.svelte
migrations/: 001_create_events_table.sql
