[workspace]
resolver = "2"
members = ["crates/common", "crates/event-store"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mauricio Mercado"]
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"

# Testing
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
serial_test = "3"
ctor = "0.6"
