[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types for event-sourcing system"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
