[package]
name = "event-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Event store implementation for event-sourcing system"

[dependencies]
common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
