[package]
name = "event-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Event store implementation for event-sourcing system"

[dependencies]
common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
serial_test = { workspace = true }
ctor = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "event_store_bench"
harness = false
