[package]
name = "projections"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Read models and projections for the CQRS query side"

[dependencies]
event-store = { path = "../event-store" }
domain = { path = "../domain" }
common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
