[package]
name = "saga"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
event-store = { path = "../event-store" }
domain = { path = "../domain" }
common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
